use consistent Skia pixel position adjustments (tdf#134346)

What happens in tdf#134346 is that the same shape was drawn twice,
once using drawPolyPolygon() and once as an outline using
drawPolyLine(). Those had different offsets, so with AA enabled
the tiny difference could be actually visible. Be more consistent
with how the pixels are positioned in float coordinates.

Change-Id: Id852fef70e7bd829ff0108a86d1ebee29c300e3a