vcl/inc/skia/gdiimpl.hxx
@@ -272,12 +272,14 @@ protected:
     sk_sp<SkImage> mergeCacheBitmaps(const SkiaSalBitmap& bitmap, const SkiaSalBitmap* alphaBitmap,
                                      const Size targetSize);
 
-    // When drawing using GPU, rounding errors may result in off-by-one errors,
+    // Skia uses floating point coordinates, so when we use integer coordinates, sometimes
+    // rounding results in off-by-one errors (down), especially when drawing using GPU,
     // see https://bugs.chromium.org/p/skia/issues/detail?id=9611 . Compensate for
-    // it by using centers of pixels (Skia uses float coordinates). In raster case
-    // it seems better to not do this though.
-    SkScalar toSkX(long x) const { return mIsGPU ? x + 0.5 : x; }
-    SkScalar toSkY(long y) const { return mIsGPU ? y + 0.5 : y; }
+    // it by using centers of pixels. Using 0.5 may sometimes round up, so go with 0.495 .
+    static constexpr SkScalar toSkX(long x) { return x + 0.495; }
+    static constexpr SkScalar toSkY(long y) { return y + 0.495; }
+    // Value to add to be exactly in the middle of the pixel.
+    static constexpr SkScalar toSkXYFix = SkScalar(0.005);
 
     template <typename charT, typename traits>
     friend inline std::basic_ostream<charT, traits>&
